test/runtime/fail/assignment/let_expected_identifier.hy

// expect error: Expected identifier after `let`

let 3 = 4
